# folder_manager

./: .gitignore  LICENSE  README.md  REMOTE_PUSH.md  app.py  pyproject.toml
.github/workflows/: ci.yml
src/folder_manager/: __init__.py
tests/: test_basic.py
