[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "folder-manager"
version = "0.0.1"
description = "Small utilities to manage folders"
authors = [ { name = "P20000", email = "" } ]
readme = "README.md"
requires-python = ">=3.8"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-q"
testpaths = ["tests"]
